CTT_Package/objects/Maven_Staging_Table__c.object
<CustomObject>
    <fields>
        <fullName>Vomiting__c</fullName>
        <label>Vomiting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X_Underlying_Illness_Specify__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>X-Underlying Illness Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maven Staging Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Maven_Contact_Id__c</columns>
        <columns>Last_Exposure_Date__c</columns>
        <columns>First_Monitoring_Date__c</columns>
        <columns>Last_Monitoring_Date__c</columns>
        <columns>Disease_Status__c</columns>
        <columns>Investigator_Name__c</columns>
        <columns>Investigator_Phone__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>MST-{000000}</displayFormat>
        <label>Maven Staging Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maven Staging Table Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>